<resources>
    <string name="app_name">Travelo</string>
    <string name="slogan">Discover the best ride for you </string>
    <string name="slogan2">The Fast and effective way to travel </string>
    <string name="hello_blank_fragment">blank Fragment</string>
    <string name="welcome">Welcome to Travelo</string>
    <string name="developer">Developed by Team \n Bloopers</string>
    <string name="register"> Get Registered </string>
    <string name="login">Lets Login</string>
    <string name="login_down">Start availing the best route for you </string>
    <string name="register_down">Sign up now and discover the best ride</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">PhoneNumber</string>
    <string name="hint_name">Bikash Hujdar</string>
    <string name="hint_email">hujdarbikash000@gmail.com</string>
    <string name="hint_phone">+9779810209126</string>
    <string name="lock_hint">Type Password</string>
    <string name="agreement">By creating an account you agree to our Terms and Condition "</string>
    <string name="signUp">SIGN UP</string>
    <string name="signIn">SIGN IN</string>
    <string name="busownerTExt">Start sharing your bus information for Travellers</string>
    <string name="login_with">Or login with</string>
    <string name="create_accont">Create account ?</string>
    <string name="home">Home</string>
    <string name="forget">Forgot Password ?</string>
    <string name="forgetdown">" Enter your registered email address below to\n  reset new password "</string>
    <string name="back">Back to Login</string>
    <string name="otptext">Verify OTP</string>
    <string name="verify">Enter the OTP code  sent to your email address \n to verify your account</string>
    <string name="create_password">Create Password</string>
    <string name="congrartsdown">Your otp has been verified successfully \nCreate new password now</string>

</resources>