<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Forgot_Password">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLevel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/forgot_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/bold"
            android:text="@string/forget"
            android:textSize="30dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/light"
            android:gravity="center"
            android:text="@string/forgetdown"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:drawableLeft="@drawable/email24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:textColor="@color/black"
            android:fontFamily="@font/regular"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:theme="@style/MyEditTextTheme"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />


        <TextView
            android:id="@+id/send_otp"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_margin="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bottom_background"
            android:backgroundTint="@color/theme1"
            android:elevation="10dp"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="SEND"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="@+id/email_address"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="@+id/email_address"
            app:layout_constraintTop_toBottomOf="@+id/email_address" />

        <TextView
            android:id="@+id/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:textColor="@color/purple_500"
            android:textSize="15dp"
            android:fontFamily="@font/bold"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>