<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.UserLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/bold"
            android:textColor="@color/black"
            android:text="Let's login"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/busownerTExt"
            app:layout_constraintEnd_toEndOf="@+id/text_login"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/text_login"
            app:layout_constraintTop_toBottomOf="@id/text_login" />

        <LinearLayout
            android:id="@+id/boxlinearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">


            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/email24"
                android:drawablePadding="20dp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:theme="@style/MyEditTextTheme" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/password_lock"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/lock_hint"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:minHeight="48dp"
                android:theme="@style/MyEditTextTheme" />

            <TextView
                android:id="@+id/check_otp"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@drawable/bottom_background"
                android:backgroundTint="@color/theme1"
                android:elevation="10dp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/signIn"
                android:textColor="@color/white"
                android:textSize="25dp"

                />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:gravity="right"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:drawableEnd="@drawable/email24"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="Contact us"
                android:textColor="@color/black"
                android:theme="@style/MyEditTextTheme"
                android:textStyle="bold"
                android:fontFamily="@font/medium"
                android:id="@+id/contact"/>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>