<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.UserLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/bold"
            android:text="Let's login"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/login_down"
            app:layout_constraintEnd_toEndOf="@+id/text_login"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/text_login"
            app:layout_constraintTop_toBottomOf="@id/text_login" />

        <LinearLayout
            android:id="@+id/boxlinearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">


            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/black"
                android:drawableLeft="@drawable/email24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:theme="@style/MyEditTextTheme" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/password_lock"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/lock_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:theme="@style/MyEditTextTheme" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/medium"
                android:gravity="right"
                android:text="Forgot Password ?"
                android:textSize="15dp"
                android:textStyle="bold"
                android:theme="@style/MyEditTextTheme" />

            <TextView
                android:id="@+id/check_otp"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_marginTop="15dp"
                android:background="@drawable/bottom_background"
                android:backgroundTint="@color/theme1"
                android:elevation="10dp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/signIn"
                android:textColor="@color/white"
                android:textSize="25dp"

                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--                <View-->
<!--                    android:id="@+id/view3"-->
<!--                    android:layout_width="50dp"-->
<!--                    android:layout_height="3dp"-->
<!--                    android:layout_marginStart="40dp"-->
<!--                    android:background="#975F5F"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/textView7"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="@+id/textView7"-->
<!--                    app:layout_constraintVertical_bias="0.315" />-->

<!--                <View-->
<!--                    android:id="@+id/view2"-->
<!--                    android:layout_width="50dp"-->
<!--                    android:layout_height="3dp"-->
<!--                    android:layout_marginEnd="40dp"-->
<!--                    android:background="#975F5F"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/textView7"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="@+id/textView7"-->
<!--                    app:layout_constraintVertical_bias="0.473" />-->

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/login_with"
                    android:textColor="@color/black"
                    android:textSize="15dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/facebook_login"
                    android:layout_width="30dp"
                    android:layout_height="30dp"

                    android:layout_marginEnd="30dp"
                    android:foregroundGravity="center"
                    android:src="@drawable/facebook_icon"
                    app:layout_constraintEnd_toStartOf="@+id/google_login"
                    app:layout_constraintTop_toTopOf="@+id/google_login" />

                <ImageView
                    android:id="@+id/google_login"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/google_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <ImageView
                    android:id="@+id/instagram_login"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/instagram"
                    app:layout_constraintStart_toEndOf="@+id/google_login"
                    app:layout_constraintTop_toTopOf="@+id/google_login" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/create_accont"
                    app:layout_constraintStart_toStartOf="@+id/facebook_login"
                    app:layout_constraintTop_toBottomOf="@+id/google_login" />

                <TextView
                    android:id="@+id/sign_up_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/medium"
                    android:text=" Sign up "
                    android:textColor="@color/theme1"
                    android:theme="@style/MyEditTextTheme"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="@+id/instagram_login"
                    app:layout_constraintHorizontal_bias="0.279"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="@+id/textView8"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>